# adventofcode_go

./: .gitignore  BUILD.bazel  WORKSPACE  helloworld.go
2015/day1/: BUILD.bazel  day1.go
2015/day6/: BUILD.bazel  day6.go
2015/util/: BUILD.bazel  util.go
2017/day1/: BUILD  day1.py
2017/day10/: BUILD  day10.py  day10.txt
2017/day11/: BUILD  day11.py
2017/day12/: BUILD  day12.py
2017/day13/: BUILD  day13.py
2017/day14/: BUILD  day14.py
2017/day15/: BUILD  day15.py
2017/day16/: BUILD  day16.py
2017/day17/: BUILD  day17.c  day17.py
2017/day18/: BUILD  day18.py  day18_2.py
2017/day19/: BUILD  day19.py  day19.txt
2017/day2/: BUILD  day2.py
2017/day20/: BUILD  day20.py
2017/day21/: BUILD  day21.py
2017/day22/: BUILD  day22.py
2017/day3/: BUILD  day3.py
2017/day4/: BUILD  day4.py
2017/day5/: BUILD  day5.py
2017/day6/: BUILD  day6.py
2017/day7/: BUILD  day7.py  day7.txt
2017/day8/: BUILD  day8.py
2017/day9/: BUILD  day9.py
