load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "day1",
    data = ["input.txt"],
    importpath = "github.com/example/project/2015/day1",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["day1.go"],
    deps = ["//2015/util:go_default_library"],
    importpath = "github.com/example/project/2015/day1",
    visibility = ["//visibility:private"],
)
